separated out header, navigation, footer fixed unordered list overflow margin fixed alignment cahnge when scrollbar appears/disappears

--- a/blog.css
+++ b/blog.css
@@ -1,3 +1,10 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-y: overlay;
+}
+
 /* menu */
 ul {
   list-style-type: none;
@@ -21,22 +28,66 @@ li a {
 
 li a:hover {
   background-color: #606060;
+  margin: auto auto auto auto;
+}
+
+p {
+  
 }
 
 /* navigation bar */
 nav {
-    float: left;
-    max-width: 160px;
-    margin: 0;
-    padding: 1em;
+  width: 128px;
+  float: left;
+  margin: 0;
+  padding: 1em;
+  margin: auto auto;
 }
 
 nav ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 .resume_pdf {
   width: 800px;
-  margin:auto auto auto auto;
+  margin: auto auto auto auto;
+}
+
+#page {
+  margin:0 auto;
+  min-height: 100%;
+  width: 1024px;
+  position: relative;
+}
+
+#header {
+  
+}
+
+#container {
+  margin: auto;
+  text-align: left;
+}
+
+#sidebar {
+  margin:0 auto;
+  float: left;
+}
+
+#content {
+  margin-left: 160px;
+  overflow: hidden;
+  padding-bottom: 100px;
+}
+
+#footer {
+  background: white;
+  font-size: 18px;
+  padding: 1rem;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
 }
